<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:background="@drawable/layout_add_link">

    <ImageView

        android:id="@+id/imageAddURL"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_language_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/Add_URL"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageAddURL"
        app:layout_constraintLeft_toRightOf="@id/imageAddURL"
        app:layout_constraintTop_toTopOf="@id/imageAddURL" />


    <EditText
        android:id="@+id/inputUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/medium"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:inputType="textUri"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorTexthint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAddURL" />


    <TextView
        android:id="@+id/textAdd"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@color/colorNoteColor3"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUrl"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorNoteColor3"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintRight_toLeftOf="@+id/textAdd"
        app:layout_constraintTop_toBottomOf="@+id/inputUrl"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>