<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhile" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/bold"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote" />

    <TextView
        android:id="@+id/textDeleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/tegular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/are_you_sure_want_to_delete_this_note"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote" />


    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/colorNoteColor3"
        android:textSize="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteNoteMessage"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorNoteColor3"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintRight_toLeftOf="@+id/textDeleteNote"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteNoteMessage"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>